...
    <fragment
        android:id="@+id/mainFragment"
        android:name="com.kiniun.covid.uk.app.main.MainFragment"
        android:label="MainFragment" >
        <action
            android:id="@+id/action_mainFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/displayFragment"
        android:name="com.kiniun.covid.uk.app.views.display.DisplayFragment"
        android:label="display_fragment"
        tools:layout="@layout/display_fragment" >
        <action
            android:id="@+id/action_displayFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
...
